[package]
name = "coursework"
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lzw"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
gio = "0.14.0"

[dependencies.gtk]
version = "0.14.0"
features = ["v3_24"]

